Fixed spacing

--- a/WeddingWebsite/wed-mediaQueries.css
+++ b/WeddingWebsite/wed-mediaQueries.css
@@ -245,7 +245,7 @@
     
     div.story-image img {
         width: 70%;
-        height: 70%;
+        height: 90%;
     }
 
     .logoName {
