--- a/WeddingWebsite/wedStyle.css
+++ b/WeddingWebsite/wedStyle.css
@@ -542,7 +542,6 @@ div.story-imgContainer{
     justify-content: center;
     text-align: center;
     align-items: center;
-    padding-bottom: 20px;
 }
 
 div.story-header h3 {
